...
      'pasta',
      'balon',
      'süsleme',
    ],

    // Sigorta & Finans
    ['Sigorta', 'Finans', 'Banka']: [
      'sigorta',
      'finans',
      'banka',
      'kredi',
      'hayat sigortası',
      'sağlık sigortası',
...
